# connect-extensions

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  STYLE.qmd  _quarto.yml  contributing.qmd  extensions-prerelease.json  extensions.json  extensions.qmd  index.qmd  pre-render-1.5.ts  pre-render-1.6.ts  pyproject.toml  vars.mk
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: audit-api.yaml  audit-reports.yaml  chat-with-content.yml  connect-integration-tests.yml  datadog-prometheus-metrics.yaml  extensions.yml  integration-session-manager.yml  job-trace-viewer.yml  oauth-integration-debug.yaml  oauth-integration-validator.yaml  package-vulnerability-scanner.yml  publisher-command-center.yml  publisher-cves.yml  reaper.yml  runtime-version-scanner.yml  sdk-assistant.yaml  usage-metrics-dashboard.yml  website.yaml  weekly-integration-tests.yml
_template/: connect-extension.qmd  connect-extension.toml
audits/: requirements.txt  runtime-versions.qmd  unpublished.qmd
docs/: creating-a-custom-workflow.qmd
extensions/app-canary/: .gitignore  README.md  _quarto.yml  app-canary.qmd  manifest.json  requirements.txt
extensions/audit-api/: connect-extension.qmd  connect-extension.toml  manifest.json  plumber.R
extensions/audit-reports/: .gitignore  _quarto.yml  connect-extension.qmd  connect-extension.toml  manifest.json  runtime-versions.qmd
extensions/audits/: _quarto.yml  index.qmd  requirements.txt  runtime-versions.qmd  unpublished.qmd
extensions/azure-openai-oauth-pyshiny/: .gitignore  README.md  app.py  manifest.json  pyproject.toml  requirements.txt
extensions/azure-openai-oauth-rshiny/: .gitignore  README.md  app.R  integrations.R  manifest.json  styles.R
extensions/chat-with-content/: CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  helpers.py  manifest.json  pyproject.toml  requirements.txt  test_helpers.py
extensions/claude-chat/: README.md  app.py  manifest.json  pyproject.toml  requirements.txt  test_app.py  test_sdk.py
extensions/claude-chat/www/: style.css
extensions/connect-scope/: .gitignore  README.md  index.html  main.py  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt
extensions/connect-user-metrics/: .Rprofile  .gitignore  CONTRIBUTE.md  README.md  _brand.yml  config.yml  dependencies.R  manifest.json  user.metrics.Rproj
extensions/connectwidgets-example/: CHANGELOG.md  README.md  connectwidgets-example.Rmd  manifest.json
extensions/content-collections/: .gitignore  README.md  app.R  manifest.json
extensions/content-health-monitor/: .gitignore  Makefile  README.md  _quarto.yml  content-health-monitor.qmd  content_health_utils.py  globals.py  manifest.json  (+2 more)
extensions/job-trace-viewer/: index.html  main.py  manifest.json  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
extensions/job-trace-viewer/src/: App.tsx  api.ts  main.tsx
extensions/job-trace-viewer/src/components/: ContentList.tsx  JobList.tsx  TraceView.tsx
extensions/job-trace-viewer/src/utils/: traces.ts
extensions/mcp-apps/content-browser/: README.md  main.py  manifest.json  pyproject.toml  requirements.txt
extensions/mcp-apps/pins-browser/: README.md  main.py  manifest.json  pyproject.toml  requirements.txt
extensions/publisher-command-center/: CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  connect-extension.toml  manifest.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_app.py  vite.config.js
extensions/publisher-command-center/scss/: index.scss
extensions/publisher-command-center/src/: index.js
extensions/publisher-command-center/src/components/: About.js  About.test.js  Author.js  Collaborators.js  ContentsComponent.js  DeleteModal.js  HowItWorks.js  Languages.js  LockContentButton.js  Metrics.js  Notifications.js  Processes.js  Releases.js  RenameModal.js  UnauthorizedView.js
extensions/publisher-command-center/src/models/: Author.js  Content.js  Contents.js  Contents.test.js  Process.js  Processes.js  Processes.test.js  Releases.js
extensions/publisher-command-center/src/utils/: dates.js  dates.test.js  notify.js  notify.test.js
extensions/publisher-command-center/src/views/: Edit.js  Home.js  Layout.js
extensions/semantic-search/: README.md  database.py  embeddings.py  indexer.py  justfile  main.py  manifest.json  pyproject.toml  requirements.txt  search.py
extensions/semantic-search/static/: index.html
extensions/semantic-search/static/assets/: index-Bzoepz__.css  index-CLC3wEz2.js  index-Cte-zjqP.css  index-D6uURXU3.js  index-DX_nRT70.js  index-DeOBnnov.js  index-DtBwO8TT.css  index-Qvyl4z1S.css
extensions/semantic-search/ui/: index.html  package.json  vite.config.js
extensions/semantic-search/ui/src/: App.vue  api.js  styles.css
extensions/semantic-search/ui/src/components/: ContentCard.vue  Settings.vue
extensions/simple-mcp-server/: CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  index.html.jinja  main.py  manifest.json  pyproject.toml  requirements.txt
extensions/simple-shiny-chat/: README.md  app.py  manifest.json  mcp_client.py  pyproject.toml  requirements.txt
extensions/simple-shiny-chat-with-mcp/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  app.py  manifest.json  pyproject.toml  requirements.txt
extensions/slack-bot/: .env.example  README.md  api.py  chat_ui.py  main.py  pyproject.toml  responder.py
extensions/slack-bot/app/: __init__.py  api.py  chat_ui.py  config.py  main.py
integration/: Dockerfile  Makefile  README.md  compose.yaml  nodejs-integration-test.sh  pyproject.toml  rstudio-connect.gcfg
integration-session-manager/: README.md  app.py  connect-extension.toml  index.qmd  manifest.json  requirements.txt
listr/: .gitignore  connect-extension.toml  index.qmd  manifest.json
oauth-integration-debug/: README.md  labs.toml  manifest.json  requirements.txt
pylist/: .gitignore  connect-extension.toml  manifest.json
reaper/: README.md  index.qmd
scripts/: extension-list.test.ts  extension-list.ts  package-lock.json  package.json
(+662 files in other folders)
