[project]
name = "chat-with-content"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic[bedrock]>=0.54.0",
    "boto3>=1.38.40",
    "chatlas>=0.8.1",
    "markdownify>=1.1.0",
    "posit-sdk>=0.10.0",
    "shiny>=1.4.0",
]
