[project]
name = "semantic-search"
version = "0.1.0"
description = "Semantic search for Posit Connect content metadata"
requires-python = ">=3.11,<3.13"
dependencies = [
    "posit-sdk>=0.8.0",
    "sentence-transformers>=3.0.0",
    "lancedb>=0.17.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
