[project]
name = "simple-shiny-chat-with-mcp"
version = "0.0.7"
description = "A Shiny chat app that calls MCP tools as the signed-in viewer, on Posit Connect."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic[bedrock]>=0.54.0",
    "boto3>=1.38.34",
    "chatlas>=0.19.0",
    "python-dotenv>=1.0.0",
    "faicons>=0.2.2",
    "google-genai>=1.21.1",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "openai>=1.86.0",
    "posit-sdk>=0.10.0",
    "shiny>=1.4.0",
    "uvicorn>=0.49.0",
]
