[project]
name = "slack-bot"
version = "0.1.0"
description = "A Slack bot using Socket Mode"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "pydantic-settings>=2.1.0",
    "shiny>=1.0.0",
    "shinychat>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
